# tele

./: .gitignore  CMakeLists.txt  README.md  dvr.json.example
.github/workflows/: build-android.yml  build-test.yml  build-windows.yml
android/: AndroidManifest.xml  build.gradle  proguard-rules.pro
android/res/values/: strings.xml  styles.xml
android/res/xml/: file_paths.xml
src/: CMakeLists-build.txt  CMakeLists.txt  console_main.cpp  main.cpp  resources.qrc
src/core/: dvrmanager.cpp  dvrmanager.h  errorlogger.h  networkscanner.cpp  networkscanner.h  recorder.cpp  recorder.h  rtspprobe.cpp  rtspprobe.h
src/ui/: main.qml
src/ui/components/: Card.qml
src/ui/pages/: ConfigurationPage.qml  DashboardPage.qml
src/ui/styles/: Theme.qml
